magneticForce system update semi watch