@@ -1,11 +1,13 @@
 package net.devs.electromod.block.custom.magnetic.MagneticForce;
 
 import net.devs.electromod.ElectroMod;
+import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3i;
+import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.Vector;
 
@@ -13,17 +15,17 @@ public record ForceProfile(Vector<Set<MVec3i>> headProfile, Vector<Set<MVec3i>> 
 {
     private static final Vector<Set<MVec3i>> EMPTY = createEmpty();
 
-    private static final Vector<Set<MVec3i>> POWER0_HEAD_NORTH = createPower0HeadNorth();
-    private static final Vector<Set<MVec3i>> POWER0_BODY_NORTH = createPower0BodyNorth();
-    private static final Vector<Set<MVec3i>> POWER0_TAIL_NORTH = createPower0TailNorth();
+    private static final Vector<Set<MVec3i>> IRON_HEAD_NORTH = createIronHeadNorth();
+    private static final Vector<Set<MVec3i>> IRON_BODY_NORTH = createIronBodyNorth();
+    private static final Vector<Set<MVec3i>> IRON_TAIL_NORTH = createIronTailNorth();
 
-    private static final Vector<Set<MVec3i>> POWER1_HEAD_NORTH = createPower1HeadNorth();
-    private static final Vector<Set<MVec3i>> POWER1_BODY_NORTH = createPower1BodyNorth();
-    private static final Vector<Set<MVec3i>> POWER1_TAIL_NORTH = createPower1TailNorth();
+    private static final Vector<Set<MVec3i>> GOLD_HEAD_NORTH = createGoldHeadNorth();
+    private static final Vector<Set<MVec3i>> GOLD_BODY_NORTH = createGoldBodyNorth();
+    private static final Vector<Set<MVec3i>> GOLD_TAIL_NORTH = createGoldTailNorth();
 
-    private static final Vector<Set<MVec3i>> POWER2_HEAD_NORTH = createPower2HeadNorth();
-    private static final Vector<Set<MVec3i>> POWER2_BODY_NORTH = createPower2BodyNorth();
-    private static final Vector<Set<MVec3i>> POWER2_TAIL_NORTH = createPower2TailNorth();
+    private static final Vector<Set<MVec3i>> COPPER_HEAD_NORTH = createCopperHeadNorth();
+    private static final Vector<Set<MVec3i>> COPPER_BODY_NORTH = createCopperBodyNorth();
+    private static final Vector<Set<MVec3i>> COPPER_TAIL_NORTH = createCopperTailNorth();
 
     public static final int minmumDistance = 3;
 
@@ -32,11 +34,99 @@ public record ForceProfile(Vector<Set<MVec3i>> headProfile, Vector<Set<MVec3i>> 
         ElectroMod.LOGGER.info("Registering ForceProfile");
     }
 
-    public static int getPowerCategory(int magneticPower)
+    public static Set<BlockPos> deployPos(BlockPos pos, Set<MVec3i> deltas)
     {
-        if (magneticPower < 0 || magneticPower > 15) return -1;
+        return MVec3i.add(deltas, pos);
+    }
 
-        return magneticPower > 2 ? 2 : magneticPower - 1;   // 0 returns -1 -> gets EMPTY
+    public static Set<BlockPos> deployPos(BlockPos pos, ForceProfile profile)
+    {
+        Set<BlockPos> positions = new HashSet<>();
+
+        for (var deltas : profile.headProfile())
+        { positions.addAll(deployPos(pos, deltas)); }
+
+        for (var deltas : profile.bodyProfile())
+        { positions.addAll(deployPos(pos, deltas)); }
+
+        for (var deltas : profile.tailProfile())
+        { positions.addAll(deployPos(pos, deltas)); }
+
+        return positions;
+    }
+
+    @Nullable
+    public static Integer getIndex(BlockPos magneticPos, ForceProfile profile, BlockPos targetPos)
+    {
+        int index = 0;
+
+        for (var deltas : profile.headProfile())
+        {
+            if (deployPos(magneticPos, deltas).contains(targetPos)) return index;
+            index++;
+        }
+
+        index = 0;
+        for (var deltas : profile.bodyProfile())
+        {
+            if (deployPos(magneticPos, deltas).contains(targetPos)) return index;
+            index++;
+        }
+
+        index = 0;
+        for (var deltas : profile.tailProfile())
+        {
+            if (deployPos(magneticPos, deltas).contains(targetPos)) return index;
+            index++;
+        }
+
+        return null;
+    }
+
+    public static Set<BlockPos> getWatch(int index, ForceProfile forceProfile)  // remove static?
+    {
+        Set<BlockPos> watch = new HashSet<>();
+
+        if (forceProfile.headProfile().size() > index)
+        { watch.addAll(MVec3i.toBlockPos(forceProfile.headProfile().get(index))); }
+
+        if (forceProfile.bodyProfile().size() > index)
+        { watch.addAll(MVec3i.toBlockPos(forceProfile.bodyProfile().get(index))); }
+
+        if (forceProfile.tailProfile().size() > index)
+        { watch.addAll(MVec3i.toBlockPos(forceProfile.tailProfile().get(index))); }
+
+        return watch;
+    }
+
+    @Nullable
+    public MVec3i find(final BlockPos magneticPos, BlockPos targetPos)
+    {
+        for (var deltas : this.headProfile)
+        {
+            for (var mvec : deltas)
+            {
+                 if (magneticPos.add(mvec).equals(targetPos)) return mvec;
+            }
+        }
+
+        for (var deltas : this.bodyProfile)
+        {
+            for (var mvec : deltas)
+            {
+                if (magneticPos.add(mvec).equals(targetPos)) return mvec;
+            }
+        }
+
+        for (var deltas : this.tailProfile)
+        {
+            for (var mvec : deltas)
+            {
+                if (magneticPos.add(mvec).equals(targetPos)) return mvec;
+            }
+        }
+
+        return null;
     }
 
     public static ForceProfile getEmptyProfile()
@@ -44,7 +134,7 @@ public record ForceProfile(Vector<Set<MVec3i>> headProfile, Vector<Set<MVec3i>> 
         return new ForceProfile(EMPTY, EMPTY, EMPTY);
     }
 
-    public static ForceProfile createForceProfile(int headPowerCategory, int bodyPowerCategory, int tailPowerCategory, Direction forceDirection)
+    public static ForceProfile createForceProfile(powerCategory headPowerCategory, powerCategory bodyPowerCategory, powerCategory tailPowerCategory, Direction forceDirection)
     {
         return new ForceProfile(
                 getHead(headPowerCategory, forceDirection),
@@ -53,7 +143,7 @@ public record ForceProfile(Vector<Set<MVec3i>> headProfile, Vector<Set<MVec3i>> 
         );
     }
 
-    public static ForceProfile createForceProfile(int powerCategory, Direction forceDirection)
+    public static ForceProfile createForceProfile(powerCategory powerCategory, Direction forceDirection)
     {
         return new ForceProfile(
                 getHead(powerCategory, forceDirection),
@@ -62,339 +152,317 @@ public record ForceProfile(Vector<Set<MVec3i>> headProfile, Vector<Set<MVec3i>> 
         );
     }
 
-    public static Vector<Set<MVec3i>> getHead(int powerCategory, Direction forceDirection)
+    public static Vector<Set<MVec3i>> getHead(powerCategory powerCategory, Direction forceDirection)
     {
         return switch (powerCategory)
         {
-            case 0 -> rotateNorthProfile(POWER0_HEAD_NORTH, forceDirection);
-            case 1 -> rotateNorthProfile(POWER1_HEAD_NORTH, forceDirection);
-            case 2 -> rotateNorthProfile(POWER2_HEAD_NORTH, forceDirection);
-            default -> EMPTY;
+            case ForceProfile.powerCategory.IRON -> rotateNorthProfile(IRON_HEAD_NORTH, forceDirection);
+            case ForceProfile.powerCategory.GOLD -> rotateNorthProfile(GOLD_HEAD_NORTH, forceDirection);
+            case ForceProfile.powerCategory.COPPER -> rotateNorthProfile(COPPER_HEAD_NORTH, forceDirection);
+            case null -> EMPTY;
         };
     }
 
-    public static Vector<Set<MVec3i>> getBody(int powerCategory, Direction forceDirection)
+    public static Vector<Set<MVec3i>> getBody(powerCategory powerCategory, Direction forceDirection)
     {
         return switch (powerCategory)
         {
-            case 0 -> rotateNorthProfile(POWER0_BODY_NORTH, forceDirection);
-            case 1 -> rotateNorthProfile(POWER1_BODY_NORTH, forceDirection);
-            case 2 -> rotateNorthProfile(POWER2_BODY_NORTH, forceDirection);
-            default -> EMPTY;
+            case ForceProfile.powerCategory.IRON -> rotateNorthProfile(IRON_BODY_NORTH, forceDirection);
+            case ForceProfile.powerCategory.GOLD -> rotateNorthProfile(GOLD_BODY_NORTH, forceDirection);
+            case ForceProfile.powerCategory.COPPER -> rotateNorthProfile(COPPER_BODY_NORTH, forceDirection);
+            case null -> EMPTY;
         };
     }
 
-    public static Vector<Set<MVec3i>> getTail(int powerCategory, Direction forceDirection)
+    public static Vector<Set<MVec3i>> getTail(powerCategory powerCategory, Direction forceDirection)
     {
         return switch (powerCategory)
         {
-            case 0 -> rotateNorthProfile(POWER0_TAIL_NORTH, forceDirection);
-            case 1 -> rotateNorthProfile(POWER1_TAIL_NORTH, forceDirection);
-            case 2 -> rotateNorthProfile(POWER2_TAIL_NORTH, forceDirection);
-            default -> EMPTY;
+            case ForceProfile.powerCategory.IRON -> rotateNorthProfile(IRON_TAIL_NORTH, forceDirection);
+            case ForceProfile.powerCategory.GOLD -> rotateNorthProfile(GOLD_TAIL_NORTH, forceDirection);
+            case ForceProfile.powerCategory.COPPER -> rotateNorthProfile(COPPER_TAIL_NORTH, forceDirection);
+            case null -> EMPTY;
         };
     }
 
     private static Vector<Set<MVec3i>> createEmpty()
-    {                                     // power 0       // power 1       // power 2
-        return new Vector<>(Arrays.asList(new HashSet<>(), new HashSet<>(), new HashSet<>()));
+    {                               // Core
+        return new Vector<>(List.of(new HashSet<>()));
     }
 
-    private static Set<MVec3i> getPower0Core()
+    private static Set<MVec3i> getIronCore()
     {
         return Set.of(
-                new MVec3i(0, 0, -1, Direction.NORTH),  // core (north)
-                new MVec3i(0, 0, 1, Direction.NORTH)   // core (south)
+                new MVec3i(0, 0, -1, Direction.NORTH, 0),  // core (north)
+                new MVec3i(0, 0, 1, Direction.NORTH, 0)   // core (south)
         );
     }
 
-    private static Vector<Set<MVec3i>> createPower0HeadNorth()
+    private static Vector<Set<MVec3i>> createIronHeadNorth()
     {
-        Set<MVec3i> power0Element = new HashSet<>(Set.of(
-                new MVec3i(0, 1, -1, Direction.UP),     // up
-                new MVec3i(0, -1, -1, Direction.DOWN),  // down
-                new MVec3i(1, 0, -1, Direction.EAST),   // right
-                new MVec3i(-1, 0, -1, Direction.WEST)   // left
-        ));
-        power0Element.addAll(getPower0Core());
-
         Vector<Set<MVec3i>> northProfile = createEmpty();
-        northProfile.set(0, power0Element);
+
+        northProfile.getFirst().addAll(getIronCore());  // core
+
+        northProfile.add(Set.of(new MVec3i(0, 1, -1, Direction.UP, powerCategory.IRON.get())));         // up
+        northProfile.add((Set.of(new MVec3i(0, -1, -1, Direction.DOWN, powerCategory.IRON.get()))));    // down
+        northProfile.add(Set.of(new MVec3i(-1, 0, -1, Direction.WEST, powerCategory.IRON.get())));      // left
+        northProfile.add(Set.of(new MVec3i(1, 0, -1, Direction.EAST, powerCategory.IRON.get())));       // right
 
         return northProfile;
     }
 
-    private static Vector<Set<MVec3i>> createPower0BodyNorth()
+    private static Vector<Set<MVec3i>> createIronBodyNorth()
     {
-        Set<MVec3i> power0Element = new HashSet<>(Set.of(
-                new MVec3i(0, 1, 0, Direction.SOUTH),   // up
-                new MVec3i(0, -1, 0, Direction.SOUTH),  // down
-                new MVec3i(1, 0, 0, Direction.SOUTH),   // right
-                new MVec3i(-1, 0, 0, Direction.SOUTH)   // left
-        ));
-        power0Element.addAll(getPower0Core());
-
         Vector<Set<MVec3i>> northProfile = createEmpty();
-        northProfile.set(0, power0Element);
+
+        northProfile.getFirst().addAll(getIronCore());  // core
+
+        northProfile.add(Set.of(new MVec3i(0, 1, 0, Direction.SOUTH, powerCategory.IRON.get())));   // up
+        northProfile.add(Set.of(new MVec3i(0, -1, 0, Direction.SOUTH, powerCategory.IRON.get())));  // down
+        northProfile.add(Set.of(new MVec3i(1, 0, 0, Direction.SOUTH, powerCategory.IRON.get())));   // left
+        northProfile.add(Set.of(new MVec3i(-1, 0, 0, Direction.SOUTH, powerCategory.IRON.get())));  // right
 
         return northProfile;
     }
 
-    private static Vector<Set<MVec3i>> createPower0TailNorth()
+    private static Vector<Set<MVec3i>> createIronTailNorth()
     {
-        Set<MVec3i> power0Element = new HashSet<>(Set.of(
-                new MVec3i(0, 1, 1, Direction.DOWN),    // up
-                new MVec3i(0, -1, 1, Direction.UP),     // down
-                new MVec3i(1, 0, 1, Direction.WEST),    // right
-                new MVec3i(-1, 0, 1, Direction.EAST)    // left
-        ));
-        power0Element.addAll(getPower0Core());
-
         Vector<Set<MVec3i>> northProfile = createEmpty();
-        northProfile.set(0, power0Element);
+
+        northProfile.getFirst().addAll(getIronCore());  // core
+
+        northProfile.add(Set.of(new MVec3i(0, 1, 1, Direction.DOWN, powerCategory.IRON.get())));    // up
+        northProfile.add(Set.of(new MVec3i(0, -1, 1, Direction.UP, powerCategory.IRON.get())));     // down
+        northProfile.add(Set.of(new MVec3i(-1, 0, 1, Direction.EAST, powerCategory.IRON.get())));   // left
+        northProfile.add(Set.of(new MVec3i(1, 0, 1, Direction.WEST, powerCategory.IRON.get())));    // right
 
         return northProfile;
     }
 
-    private static Set<MVec3i> getPower1Core()
+    private static Set<MVec3i> getGoldCore()
     {
         return Set.of(
-                new MVec3i(0, 0, -2, Direction.NORTH),  // core2 (north)
-                new MVec3i(0, 0, 2, Direction.NORTH)   // core2 (south)
+                new MVec3i(0, 0, -2, Direction.NORTH, powerCategory.GOLD.get()),  // core2 (north)
+                new MVec3i(0, 0, 2, Direction.NORTH, powerCategory.GOLD.get())   // core2 (south)
         );
     }
 
-    private static Vector<Set<MVec3i>> createPower1HeadNorth()
+    private static Vector<Set<MVec3i>> createGoldHeadNorth()
     {
-        Set<MVec3i> power0Element = Set.of(        // dont need core
-                new MVec3i(-1, 1, -1, Direction.SOUTH), // up left
-                new MVec3i(1, 1, -1, Direction.SOUTH),  // up right
-                new MVec3i(-1, -1, -1, Direction.SOUTH),// down left
-                new MVec3i(1, -1, -1, Direction.SOUTH)  // down right
+        Vector<Set<MVec3i>> northProfile = createIronHeadNorth();
+
+        northProfile.getFirst().addAll(getGoldCore());  // core
+
+        northProfile.add(Set.of(new MVec3i(-1, 1, -1, Direction.SOUTH, powerCategory.IRON.get())));     // up left
+        northProfile.add(Set.of(new MVec3i(1, 1, -1, Direction.SOUTH, powerCategory.IRON.get())));      // up right
+        northProfile.add(Set.of(new MVec3i(-1, -1, -1, Direction.SOUTH, powerCategory.IRON.get())));    // down left
+        northProfile.add(Set.of(new MVec3i(1, -1, -1, Direction.SOUTH, powerCategory.IRON.get())));     // down right
+
+
+        Set<MVec3i> goldHeadElement = Set.of( // up facing north
+                new MVec3i(0, 1, -2, Direction.UP, powerCategory.GOLD.get()),
+                new MVec3i(0, 2, -2, Direction.UP, powerCategory.GOLD.get()),
+                new MVec3i(0, 2, -1, Direction.SOUTH, powerCategory.GOLD.get())
         );
 
-        Vector<Set<MVec3i>> northProfile = createPower0HeadNorth();
-        northProfile.get(0).addAll(power0Element);     // modify power 0
-
-        Set<MVec3i> power1ElementElement = Set.of( // up facing north
-                new MVec3i(0, 1, -2, Direction.UP),
-                new MVec3i(0, 2, -2, Direction.UP),
-                new MVec3i(0, 2, -1, Direction.SOUTH)
-        );
-
-        Set<MVec3i> power1Element = createNorthElement(power1ElementElement,
-                MVec3i.Angles.CLOCK_360,
-                MVec3i.Angles.CLOCK_90,
-                MVec3i.Angles.CLOCK_180,
-                MVec3i.Angles.CLOCK_270
-        );
-        power1Element.addAll(getPower0Core());
-        power1Element.addAll(getPower1Core());
-
-        northProfile.set(1, power1Element);
+        northProfile.add(createNorthElement(goldHeadElement, MVec3i.Angles.CLOCK_360)); // up
+        northProfile.add(createNorthElement(goldHeadElement, MVec3i.Angles.CLOCK_180)); // down
+        northProfile.add(createNorthElement(goldHeadElement, MVec3i.Angles.CLOCK_270)); // left
+        northProfile.add(createNorthElement(goldHeadElement, MVec3i.Angles.CLOCK_90));  // right
 
         return northProfile;
     }
 
-    private static Vector<Set<MVec3i>> createPower1BodyNorth()
+    private static Vector<Set<MVec3i>> createGoldBodyNorth()
     {
-        Set<MVec3i> power0Element = Set.of(        // don't need core
-                new MVec3i(-1, 1, 0, Direction.SOUTH),  // up left
-                new MVec3i(1, 1, 0, Direction.SOUTH),   // up right
-                new MVec3i(-1, -1, 0, Direction.SOUTH), // left down
-                new MVec3i(1, -1, 0, Direction.SOUTH)   // left right
-        );
+        Vector<Set<MVec3i>> northProfile = createIronBodyNorth();
 
-        Vector<Set<MVec3i>> northProfile = createPower0BodyNorth();
-        northProfile.get(0).addAll(power0Element);     // modify power 0
+        northProfile.getFirst().addAll(getGoldCore());      // core
 
-        Set<MVec3i> power1Element = new HashSet<>(Set.of(        // don't need rotation
-                new MVec3i(0, 2, 0, Direction.SOUTH),   // up
-                new MVec3i(0, -2, 0, Direction.SOUTH),  // down
-                new MVec3i(2, 0, 0, Direction.SOUTH),   // right
-                new MVec3i(-2, 0, 0, Direction.SOUTH)   // left
-        ));
-        power1Element.addAll(getPower0Core());
-        power1Element.addAll(getPower1Core());
+        northProfile.add(Set.of(new MVec3i(-1, 1, 0, Direction.SOUTH, powerCategory.IRON.get())));  // up left
+        northProfile.add(Set.of(new MVec3i(1, 1, 0, Direction.SOUTH, powerCategory.IRON.get())));   // up right
+        northProfile.add(Set.of(new MVec3i(-1, -1, 0, Direction.SOUTH, powerCategory.IRON.get()))); // down left
+        northProfile.add(Set.of(new MVec3i(1, -1, 0, Direction.SOUTH, powerCategory.IRON.get())));  // down right
 
-        northProfile.set(1, power1Element);
+
+        northProfile.add(Set.of(new MVec3i(0, 2, 0, Direction.SOUTH, powerCategory.GOLD.get())));   // up
+        northProfile.add(Set.of(new MVec3i(0, -2, 0, Direction.SOUTH, powerCategory.GOLD.get())));  // down
+        northProfile.add(Set.of(new MVec3i(-2, 0, 0, Direction.SOUTH, powerCategory.GOLD.get())));  // left
+        northProfile.add(Set.of(new MVec3i(2, 0, 0, Direction.SOUTH, powerCategory.GOLD.get())));   // right
 
         return northProfile;
     }
 
-    private static Vector<Set<MVec3i>> createPower1TailNorth()
+    private static Vector<Set<MVec3i>> createGoldTailNorth()
     {
-        Set<MVec3i> power0Element = Set.of(       // dont need core
-                new MVec3i(-1, 1, 1, Direction.SOUTH), // up left
-                new MVec3i(1, 1, 1, Direction.SOUTH),  // up right
-                new MVec3i(-1, -1, 1, Direction.SOUTH),// down left
-                new MVec3i(1, -1, 1, Direction.SOUTH)  // down right
+        Vector<Set<MVec3i>> northProfile = createIronTailNorth();
+
+        northProfile.getFirst().addAll(getGoldCore());      // core
+
+        northProfile.add(Set.of(new MVec3i(-1, 1, 1, Direction.SOUTH, powerCategory.IRON.get())));  // up left
+        northProfile.add(Set.of(new MVec3i(1, 1, 1, Direction.SOUTH, powerCategory.IRON.get())));   // up right
+        northProfile.add(Set.of(new MVec3i(-1, -1, 1, Direction.SOUTH, powerCategory.IRON.get()))); // down left
+        northProfile.add(Set.of(new MVec3i(1, -1, 1, Direction.SOUTH, powerCategory.IRON.get())));  // down right
+
+
+        Set<MVec3i> goldTailElement = Set.of( // up facing north
+                new MVec3i(0, 1, 2, Direction.DOWN, powerCategory.GOLD.get()),
+                new MVec3i(0, 2, 2, Direction.DOWN, powerCategory.GOLD.get()),
+                new MVec3i(0, 2, 1, Direction.SOUTH, powerCategory.GOLD.get())
         );
 
-        Vector<Set<MVec3i>> northProfile = createPower0TailNorth();
-        northProfile.get(0).addAll(power0Element);     // modify power 0
-
-        Set<MVec3i> power1ElementElement = Set.of( // up facing north
-                new MVec3i(0, 1, 2, Direction.DOWN),
-                new MVec3i(0, 2, 2, Direction.DOWN),
-                new MVec3i(0, 2, 1, Direction.SOUTH)
-        );
-
-        Set<MVec3i> power1Element = createNorthElement(power1ElementElement,
-                MVec3i.Angles.CLOCK_360,
-                MVec3i.Angles.CLOCK_90,
-                MVec3i.Angles.CLOCK_180,
-                MVec3i.Angles.CLOCK_270
-        );
-        power1Element.addAll(getPower0Core());
-        power1Element.addAll(getPower1Core());
-
-        northProfile.set(1, power1Element);
+        northProfile.add(createNorthElement(goldTailElement, MVec3i.Angles.CLOCK_360)); // up
+        northProfile.add(createNorthElement(goldTailElement, MVec3i.Angles.CLOCK_180)); // down
+        northProfile.add(createNorthElement(goldTailElement, MVec3i.Angles.CLOCK_270)); // left
+        northProfile.add(createNorthElement(goldTailElement, MVec3i.Angles.CLOCK_90));  // right
 
         return northProfile;
     }
 
-    private static Set<MVec3i> getPower2Core()
+    private static Set<MVec3i> getCopperCore()
     {
         return Set.of(
-                new MVec3i(0, 0, -3, Direction.NORTH),  // north
-                new MVec3i(0, 0, 3, Direction.NORTH)    // south
+                new MVec3i(0, 0, -3, Direction.NORTH, powerCategory.COPPER.get()),  // north
+                new MVec3i(0, 0, 3, Direction.NORTH ,powerCategory.COPPER.get())    // south
         );
     }
 
-    private static Vector<Set<MVec3i>> createPower2HeadNorth()
+    private static Vector<Set<MVec3i>> createCopperHeadNorth()
     {
-        Set<MVec3i> power1ElementElement1 = Set.of(     // don't need core, curved element
-                new MVec3i(-2, 1, -1, Direction.SOUTH), // left
-                new MVec3i(-2, 1, -2, Direction.WEST),  // left
-                new MVec3i(-1, 1, -2, Direction.WEST),  // left
-                new MVec3i(2, 1, -1, Direction.SOUTH),  // right
-                new MVec3i(2, 1, -2, Direction.EAST),   // right
-                new MVec3i(1, 1, -2, Direction.EAST)    // right
+        Vector<Set<MVec3i>> northProfile = createGoldHeadNorth();
+
+        northProfile.getFirst().addAll(getCopperCore());
+
+        Set<MVec3i> goldHeadElement1left = Set.of(     // curved element
+                new MVec3i(-2, 1, -1, Direction.SOUTH, powerCategory.GOLD.get()), // left
+                new MVec3i(-2, 1, -2, Direction.WEST, powerCategory.GOLD.get()),  // left
+                new MVec3i(-1, 1, -2, Direction.WEST, powerCategory.GOLD.get())  // left
         );
-        Set<MVec3i> power1Element1 = createNorthElement(power1ElementElement1,
-                new Vec3i(0, 0, 0), // up
-                new Vec3i(0, -2, 0) // down
+        Set<MVec3i> goldHeadElement1right = Set.of(
+                new MVec3i(2, 1, -1, Direction.SOUTH, powerCategory.GOLD.get()),  // right
+                new MVec3i(2, 1, -2, Direction.EAST, powerCategory.GOLD.get()),   // right
+                new MVec3i(1, 1, -2, Direction.EAST, powerCategory.GOLD.get())    // right
         );
 
-        Set<MVec3i> power1ElementElement2 = Set.of(     // don't need core, straight element
-                new MVec3i(-1, 2, -1, Direction.SOUTH),
-                new MVec3i(-1, 2, -2, Direction.SOUTH)
-        );
-        Set<MVec3i> power1Element2 = createNorthElement(power1ElementElement2,
-                new Vec3i(0, 0, 0),     // up left
-                new Vec3i(2, 0, 0),     // up right
-                new Vec3i(0, -4, 0),    // down left
-                new Vec3i(2, -4, 0)     // down right
+        northProfile.add(goldHeadElement1left);                                             // up left
+        northProfile.add(goldHeadElement1right);                                            // up right
+        northProfile.add(createNorthElement(goldHeadElement1left, new Vec3i(0, -2, 0)));    // down left
+        northProfile.add(createNorthElement(goldHeadElement1right, new Vec3i(0, -2, 0)));   // down right
+
+        Set<MVec3i> goldHeadElement2left = Set.of(     // straight element
+                new MVec3i(-1, 2, -1, Direction.SOUTH, powerCategory.GOLD.get()),
+                new MVec3i(-1, 2, -2, Direction.SOUTH ,powerCategory.GOLD.get())
         );
 
-        Vector<Set<MVec3i>> northProfile = createPower1HeadNorth();
-        northProfile.get(1).addAll(power1Element1);  // modify power 1
-        northProfile.get(1).addAll(power1Element2);
+        northProfile.add(createNorthElement(goldHeadElement2left, new Vec3i(0, 0, 0)));     // up left
+        northProfile.add(createNorthElement(goldHeadElement2left, new Vec3i(2, 0, 0)));     // up right
+        northProfile.add(createNorthElement(goldHeadElement2left, new Vec3i(0, -4, 0)));    // down left
+        northProfile.add(createNorthElement(goldHeadElement2left, new Vec3i(2, -4, 0)));    // down right
 
-        Set<MVec3i> power2ElementElement = Set.of(    // up facing north
-                new MVec3i(0, 1, -3, Direction.UP),
-                new MVec3i(0, 2, -3, Direction.UP),
-                new MVec3i(0, 3, -3, Direction.UP),
-                new MVec3i(0, 3, -2, Direction.SOUTH),
-                new MVec3i(0, 3, -1, Direction.SOUTH)
-        );
-        Set<MVec3i> power2Element = createNorthElement(power2ElementElement,
-                MVec3i.Angles.CLOCK_360,
-                MVec3i.Angles.CLOCK_90,
-                MVec3i.Angles.CLOCK_180,
-                MVec3i.Angles.CLOCK_270
-        );
-        power2Element.addAll(getPower0Core());
-        power2Element.addAll(getPower1Core());
-        power2Element.addAll(getPower2Core());
 
-        northProfile.set(2, power2Element);
+        Set<MVec3i> copperHeadElement = Set.of(    // up facing north
+                new MVec3i(0, 1, -3, Direction.UP, powerCategory.COPPER.get()),
+                new MVec3i(0, 2, -3, Direction.UP ,powerCategory.COPPER.get()),
+                new MVec3i(0, 3, -3, Direction.UP, powerCategory.COPPER.get()),
+                new MVec3i(0, 3, -2, Direction.SOUTH, powerCategory.COPPER.get()),
+                new MVec3i(0, 3, -1, Direction.SOUTH, powerCategory.COPPER.get())
+        );
+
+        northProfile.add(createNorthElement(copperHeadElement, MVec3i.Angles.CLOCK_360));   // up
+        northProfile.add(createNorthElement(copperHeadElement, MVec3i.Angles.CLOCK_180));   // down
+        northProfile.add(createNorthElement(copperHeadElement, MVec3i.Angles.CLOCK_270));   // left
+        northProfile.add(createNorthElement(copperHeadElement, MVec3i.Angles.CLOCK_90));    // right
 
         return northProfile;
     }
 
-    private static Vector<Set<MVec3i>> createPower2BodyNorth()
+    private static Vector<Set<MVec3i>> createCopperBodyNorth()
     {
-        Set<MVec3i> power1Element = Set.of(             // don't need core
-                new MVec3i(-1, 2, 0, Direction.SOUTH),  // up left up
-                new MVec3i(-2, 1, 0, Direction.SOUTH),  // up left left
-                new MVec3i(1, 2, 0, Direction.SOUTH),   // up right up
-                new MVec3i(2, 1, 0, Direction.SOUTH),   // up right right
-                new MVec3i(-1, -2, 0, Direction.SOUTH), // down left down
-                new MVec3i(-2, -1, 0, Direction.SOUTH), // down left left
-                new MVec3i(1, -2, 0, Direction.SOUTH),  // down right down
-                new MVec3i(2, -1, 0, Direction.SOUTH)   // down right right
-        );
+        Vector<Set<MVec3i>> northProfile = createGoldBodyNorth();
 
-        Vector<Set<MVec3i>> northProfile = createPower1BodyNorth();
-        northProfile.get(1).addAll(power1Element);  // modify power 1
+        northProfile.getFirst().addAll(getCopperCore());    // core
 
-        Set<MVec3i> power2Element = new HashSet<>(Set.of(   // don't need rotation
-                new MVec3i(0, 3, 0, Direction.SOUTH),   // up
-                new MVec3i(0, -3, 0, Direction.SOUTH),  // down
-                new MVec3i(-3, 0, 0, Direction.SOUTH),  // left
-                new MVec3i(3, 0, 0, Direction.SOUTH)    // right
-        ));
-        power2Element.addAll(getPower0Core());
-        power2Element.addAll(getPower1Core());
-        power2Element.addAll(getPower2Core());
+        // curved element
+        northProfile.add(Set.of(new MVec3i(-2, 1, 0, Direction.SOUTH, powerCategory.GOLD.get())));  // up left
+        northProfile.add(Set.of(new MVec3i(2, 1, 0, Direction.SOUTH, powerCategory.GOLD.get())));   // up right
+        northProfile.add(Set.of(new MVec3i(-2, -1, 0, Direction.SOUTH, powerCategory.GOLD.get()))); // down left
+        northProfile.add(Set.of(new MVec3i(2, -1, 0, Direction.SOUTH, powerCategory.GOLD.get())));  // down right
+        // straight element
+        northProfile.add(Set.of(new MVec3i(-1, 2, 0, Direction.SOUTH, powerCategory.GOLD.get())));  // up left
+        northProfile.add(Set.of(new MVec3i(1, 2, 0, Direction.SOUTH, powerCategory.GOLD.get())));   // up right
+        northProfile.add(Set.of(new MVec3i(-1, -2, 0, Direction.SOUTH, powerCategory.GOLD.get()))); // down left
+        northProfile.add(Set.of(new MVec3i(1, -2, 0, Direction.SOUTH, powerCategory.GOLD.get())));  // down right
 
-        northProfile.set(2, power2Element);
+
+        northProfile.add(Set.of(new MVec3i(0, 3, 0, Direction.SOUTH, powerCategory.COPPER.get())));     // up
+        northProfile.add(Set.of(new MVec3i(0, -3, 0, Direction.SOUTH, powerCategory.COPPER.get())));    // down
+        northProfile.add(Set.of(new MVec3i(-3, 0, 0, Direction.SOUTH, powerCategory.COPPER.get())));    // left
+        northProfile.add(Set.of(new MVec3i(3, 0, 0, Direction.SOUTH, powerCategory.COPPER.get())));     // right
 
         return northProfile;
     }
 
-    private static Vector<Set<MVec3i>> createPower2TailNorth()
+    private static Vector<Set<MVec3i>> createCopperTailNorth()
     {
-        Set<MVec3i> power1ElementElement1 = Set.of(     // don't need core, curved element
-                new MVec3i(-2, 1, 1, Direction.SOUTH),  // left
-                new MVec3i(-2, 1, 2, Direction.EAST),   // left
-                new MVec3i(-1, 1, 2, Direction.EAST),   // left
-                new MVec3i(2, 1, 1, Direction.SOUTH),   // right
-                new MVec3i(2, 1, 2, Direction.WEST),    // right
-                new MVec3i(1, 1, 2, Direction.WEST)     // right
+        Vector<Set<MVec3i>> northProfile = createGoldTailNorth();
+
+        northProfile.getFirst().addAll(getCopperCore());
+
+        Set<MVec3i> goldTailElement1left = Set.of(
+                new MVec3i(-2, 1, 1, Direction.SOUTH, powerCategory.GOLD.get()),  // left
+                new MVec3i(-2, 1, 2, Direction.EAST, powerCategory.GOLD.get()),   // left
+                new MVec3i(-1, 1, 2, Direction.EAST, powerCategory.GOLD.get())    // left
         );
-        Set<MVec3i> power1Element1 = createNorthElement(power1ElementElement1,
-                new Vec3i(0, 0, 0), // up
-                new Vec3i(0, -2, 0) // down
+        Set<MVec3i> goldTailElement1right = Set.of(
+                new MVec3i(2, 1, 1, Direction.SOUTH, powerCategory.GOLD.get()),   // right
+                new MVec3i(2, 1, 2, Direction.WEST, powerCategory.GOLD.get()),    // right
+                new MVec3i(1, 1, 2, Direction.WEST, powerCategory.GOLD.get())     // right
         );
 
-        Set<MVec3i> power1ElementElement2 = Set.of(     // don't need core, straight element
-                new MVec3i(-1, 2, 1, Direction.SOUTH),
-                new MVec3i(-1, 2, 2, Direction.SOUTH)
-        );
-        Set<MVec3i> power1Element2 = createNorthElement(power1ElementElement2,
-                new Vec3i(0, 0, 0),     // up left
-                new Vec3i(2, 0, 0),     // up right
-                new Vec3i(0, -4, 0),    // down left
-                new Vec3i(2, -4, 0)     // down right
+        northProfile.add(goldTailElement1left);                                             // up left
+        northProfile.add(goldTailElement1right);                                            // up right
+        northProfile.add(createNorthElement(goldTailElement1left, new Vec3i(0, -2, 0)));    // down left
+        northProfile.add(createNorthElement(goldTailElement1right, new Vec3i(0, -2, 0)));   // down right
+
+        Set<MVec3i> goldTailElement2left = Set.of(     // straight element
+                new MVec3i(-1, 2, 1, Direction.SOUTH, powerCategory.GOLD.get()),
+                new MVec3i(-1, 2, 2, Direction.SOUTH, powerCategory.GOLD.get())
         );
 
-        Vector<Set<MVec3i>> northProfile = createPower1TailNorth();
-        northProfile.get(1).addAll(power1Element1);
-        northProfile.get(1).addAll(power1Element2);
+        northProfile.add(createNorthElement(goldTailElement2left, new Vec3i(0, 0, 0)));     // up left
+        northProfile.add(createNorthElement(goldTailElement2left, new Vec3i(2, 0, 0)));     // up right
+        northProfile.add(createNorthElement(goldTailElement2left, new Vec3i(0, -4, 0)));    // down left
+        northProfile.add(createNorthElement(goldTailElement2left, new Vec3i(2, -4, 0)));    // down right
 
-        Set<MVec3i> power2ElementElement = Set.of(      // up facing north
-                new MVec3i(0, 1, 3, Direction.DOWN),
-                new MVec3i(0, 2, 3, Direction.DOWN),
-                new MVec3i(0, 3, 3, Direction.DOWN),
-                new MVec3i(0, 3, 2, Direction.SOUTH),
-                new MVec3i(0, 3, 1, Direction.SOUTH)
-        );
-        Set<MVec3i> power2Element = createNorthElement(power2ElementElement,
-                MVec3i.Angles.CLOCK_360,
-                MVec3i.Angles.CLOCK_90,
-                MVec3i.Angles.CLOCK_180,
-                MVec3i.Angles.CLOCK_270
-        );
-        power2Element.addAll(getPower0Core());
-        power2Element.addAll(getPower1Core());
-        power2Element.addAll(getPower2Core());
 
-        northProfile.set(2, power2Element);
+        Set<MVec3i> copperTailElement = Set.of(      // up facing north
+                new MVec3i(0, 1, 3, Direction.DOWN, powerCategory.COPPER.get()),
+                new MVec3i(0, 2, 3, Direction.DOWN, powerCategory.COPPER.get()),
+                new MVec3i(0, 3, 3, Direction.DOWN, powerCategory.COPPER.get()),
+                new MVec3i(0, 3, 2, Direction.SOUTH, powerCategory.COPPER.get()),
+                new MVec3i(0, 3, 1, Direction.SOUTH, powerCategory.COPPER.get())
+        );
+
+        northProfile.add(createNorthElement(copperTailElement, MVec3i.Angles.CLOCK_360));   // up
+        northProfile.add(createNorthElement(copperTailElement, MVec3i.Angles.CLOCK_180));   // down
+        northProfile.add(createNorthElement(copperTailElement, MVec3i.Angles.CLOCK_270));   // left
+        northProfile.add(createNorthElement(copperTailElement, MVec3i.Angles.CLOCK_90));    // right
 
         return northProfile;
+    }
+
+    public enum powerCategory
+    {
+        IRON(0),
+        GOLD(-1),
+        COPPER(-2);
+
+        private final int forceDelta;
+
+        powerCategory(int delta) { this.forceDelta = delta; }
+
+        public int get() {  return this.forceDelta; }
     }
 
     private static Set<MVec3i> createNorthElement(Set<MVec3i> northElementElement, Vec3i... variations)
